--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "guswitch <gustaavohenrique@hotmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.21.0",
